--- a/mounted.html
+++ b/mounted.html
@@ -13,10 +13,17 @@
             const appdata = {
                 data() {
                     return {
-                        message: "Hello Vue"
+                        message: 'Hello Vue!',
+                        count: 0
                     }
+                },
+                mounted() {
+                    setInterval(() => {
+                        this.count++
+                        this.message = 'Count: ' + this.count
+                    }, 1000)
                 }
-            }
+            }         
             Vue.createApp(appdata).mount('#app')
         </script>
     </body>
